--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,21 @@
 [package]
-authors = ["Jason Ozias <jason.ozias@gmail.com>"]
+authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
+description = "repomon library for common components"
+documentation = "http://docs.rs/repomon"
+homepage = "http://docs.rs/repomon"
+keywords = ["git", "repository", "monitor", "config"]
 license = "MIT/Apache-2.0"
 name = "repomon"
 readme = "README.md"
+repository = "https://github.com/rustyhorde/repomon"
 version = "0.1.0"
 
 [dependencies]
-clap = "2.29.0"
 error-chain = "0.11.0"
-git2 = "0.6.9"
+getset = "0.0.5"
+serde = "1.0.26"
+serde_derive = "1.0.26"
+toml = "0.4.5"
+
+[dev-dependencies]
+bincode = "0.9.2"
