--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ getset = "0.0.5"
 serde = "1.0.26"
 serde_derive = "1.0.26"
 toml = "0.4.5"
+uuid = { version = "0.5.1", features = ["serde", "use_std", "v5"]}
+url = "1.6.0"
 
 [dev-dependencies]
 bincode = "0.9.2"
